Install profile up: Raa page's css color styles fixed for PNCAL, PNM and PNP. Accordion set with all panels collapsed by default.

--- a/repository/themes/custom/pnf/less/pnme_style.css.less
+++ b/repository/themes/custom/pnf/less/pnme_style.css.less
@@ -69,3 +69,14 @@ a#text_resize_increase,
 a#text_resize_decrease {
   color: #a1a1a1 !important;
 }
+
+/* RAA styles */
+.view-raa {
+  .ui-corner-all,
+  .ui-state-active,
+  .ui-state-hover,
+  .ui-state-focus,
+  .ui-state-default{
+    background: #2b9bb1 !important;
+  }
+}
